# track-order-backend

./: LICENSE  Makefile  README.md  docker-compose.yml  kong.yml  pyproject.toml  requirements.txt
dockerfiles/: api.Dockerfile  websocket.Dockerfile
track_api/api/: admin.py  models.py  urls.py
track_api/api/migrations/: 0001_initial.py
track_api/api/serializers/: pedidos_serializers.py  users_serializers.py
track_api/api/views/: pedidos_views.py  users_views.py
track_api/core/: settings.py  urls.py
track_websocket/: app.py
