[tool.poetry]
name = "track-order-backend"
version = "0.1.0"
description = ""
authors = ["IsisAriele"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flake8 = "^7.1.1"
unimport = "^1.2.1"
isort = "^5.13.2"
black = "^24.8.0"
pytest = "^8.3.3"
django = "^5.1.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
